--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "version": "1.0.0",
   "author": "mottox2 <y.mottox2@gmail.com>",
   "dependencies": {
+    "dotenv": "^6.0.0",
     "gatsby": "next",
-    "gatsby-plugin-react-helmet": "next",
     "gatsby-plugin-manifest": "next",
     "gatsby-plugin-offline": "next",
+    "gatsby-plugin-react-helmet": "next",
+    "gatsby-source-contentful": "^1.3.54",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-helmet": "^5.2.0"
