--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "author": "mottox2 <y.mottox2@gmail.com>",
   "dependencies": {
     "dotenv": "^6.0.0",
-    "gatsby": "next",
-    "gatsby-plugin-manifest": "next",
-    "gatsby-plugin-offline": "next",
-    "gatsby-plugin-react-helmet": "next",
-    "gatsby-source-contentful": "^1.3.54",
+    "gatsby": "2.0.6",
+    "gatsby-plugin-manifest": "2.0.2",
+    "gatsby-plugin-offline": "2.0.5",
+    "gatsby-plugin-react-helmet": "3.0.0",
+    "gatsby-source-contentful": "^2.0.1",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-helmet": "^5.2.0"
